--- a/src/checkbox-table/checkbox-table.less
+++ b/src/checkbox-table/checkbox-table.less
@@ -25,7 +25,6 @@
         border: none;
 
         .rt-table {
-            border-top: @default-border;
             border-bottom: @default-border;
         }
 
@@ -38,8 +37,7 @@
                 text-align: left;
 
                 &:not(:last-child) {
-                    border-right: @default-border;
-                    border-right-style: dashed;
+                    border-right: 0;
                 }
 
                 &:focus {
@@ -72,8 +70,7 @@
             }
 
             &:not(:last-child) {
-                border-right: @default-border;
-                border-right-style: dashed;
+                border-right: 0;
             }
         }
     }
