--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -8,7 +8,7 @@
     .node-box {
         margin: 20px;
         position: relative;
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 
         &:not(:first-child) {
             .icon {
@@ -26,7 +26,6 @@
         }
 
         label {
-            padding-left: 8px;
             font-weight: normal;
         }
 
@@ -81,10 +80,6 @@
                         margin-bottom: 0;
                     }
                 }
-
-                //&:not(:first-child) {
-                //    border-top: @default-border;
-                //}
 
                 .child-node-count {
                     display: flex;
