--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -57,7 +57,7 @@
         .node-list {
             margin: 0;
             padding: 0;
-            height: 205px;
+            max-height: 184px;
             overflow-y: auto;
             border: @default-border;
             list-style-type: none;
