--- a/src/form/form.less
+++ b/src/form/form.less
@@ -10,7 +10,7 @@
 
     input[type='text'], textarea {
         &::placeholder {
-            color: @gray-mid;
+            color: @gray-darker;
         }
     }
 
