--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -69,6 +69,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                position: relative;
                 cursor: pointer;
                 white-space: pre-line;
 
