Add exp. text WIP

--- a/src/icons.less
+++ b/src/icons.less
@@ -16,6 +16,7 @@
 @two-box-remove-all: {}
 @error-icon: {}
 @info-icon: {}
+@info-icon-inv: {}
 @success-icon: {}
 @unchanged-icon: {}
 @close-icon: {}
