--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -105,3 +105,17 @@
 .multi-level-checkbox-editor-filter {
     margin-left: 20px;
 }
+
+.explanatory-text {
+    max-width: 400px;
+    color: @info-deep;
+    display: flex;
+    margin-top: 20px;
+
+    &-icon {
+        @info-icon-inv();
+        font-size: 14px;
+        padding-right: 10px;
+    }
+
+}
