Add `infoText` prop and provde callback for searching

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -106,7 +106,7 @@
     margin-left: 20px;
 }
 
-.explanatory-text {
+.info-text {
     max-width: 400px;
     color: @info-deep;
     display: flex;
