Multi Level Checkbox Editor with search (#41)
* Filter nodes

* Add test for `getFilteredNodes`

* Extract SearchInput component

* Explicitly return bool from filter fn

* Add exp. text WIP

* Add `infoText` prop and provde callback for searching

* Re-organize code

* Fix `getFilteredNodes` fn

* Update info-box

* Formatting update

* Remove comment from CSS

* Remove redundant test case

* Make things more configurable

--- a/src/icons.less
+++ b/src/icons.less
@@ -16,5 +16,8 @@
 @two-box-remove-all: {}
 @error-icon: {}
 @info-icon: {}
+@info-icon-inv: {}
 @success-icon: {}
 @unchanged-icon: {}
+@close-icon: {}
+@warning-icon-inv: {}
