--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -1,3 +1,5 @@
+@import 'search-input';
+
 .multi-level-checkbox-editor {
     display: flex;
 
@@ -6,7 +8,7 @@
     };
 
     .node-box {
-        margin: 20px;
+        margin: 10px 20px;
         position: relative;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 
@@ -99,3 +101,34 @@
         }
     }
 }
+
+.multi-level-checkbox-editor-filter {
+    margin-left: 20px;
+}
+
+.info-box {
+    max-width: 400px;
+    display: flex;
+    margin-top: 20px;
+
+    &-icon {
+        font-size: 14px;
+        padding-right: 10px;
+    }
+
+    &.info {
+        color: @info-deep;
+        .info-box-icon {
+            @info-icon-inv();
+        }
+    }
+
+    &.warning {
+        color: @warning;
+        margin-left: 20px;
+        .info-box-icon {
+            @warning-icon-inv();
+        }
+    }
+}
+
