Introduce new icon and apply it for the form group

--- a/src/icons.less
+++ b/src/icons.less
@@ -1,5 +1,6 @@
 @multi-level-checkbox-arrow-icon: {}
 @dropdown-icon: {}
+@dropdown-icon-wide: {}
 @table-pagination-first: {}
 @table-pagination-previous: {}
 @table-pagination-next: {}
