Use `SearchInput` component

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -104,6 +104,8 @@
 
 .multi-level-checkbox-editor-filter {
     margin-left: 20px;
+    width: 350px;
+    border: @default-border;
 }
 
 .info-box {
