Re-organize and cleanup

--- a/src/index.less
+++ b/src/index.less
@@ -7,6 +7,7 @@
 @import 'dialog/dialog';
 @import 'form/form';
 @import 'input/input';
+@import 'input/search-input';
 @import 'label/label';
 @import 'multi-level-checkbox-editor/multi-level-checkbox-editor';
 @import 'notification/notification';
