Search inputs with clear (#45)
* Use `SearchInput` component

* Re-organize and cleanup

* [skip travis] Remove import in CSS file

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -1,5 +1,3 @@
-@import 'search-input';
-
 .multi-level-checkbox-editor {
     display: flex;
 
@@ -104,6 +102,8 @@
 
 .multi-level-checkbox-editor-filter {
     margin-left: 20px;
+    width: 350px;
+    border: @default-border;
 }
 
 .info-box {
