--- a/src/input/search-input.less
+++ b/src/input/search-input.less
@@ -1,10 +1,9 @@
 .search-input {
     display: flex;
     justify-content: space-between;
+    color: @gray-darker;
 
-    height: 30px;
-    width: 350px;
-    border: @default-border;
+    width: 100%;
     background-color: @white;
 
     .search-input-icon {
