Disabled button and tooltip bugfix

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -185,6 +185,10 @@
         height: 15px;
         margin-right: 8px;
 
+        &:disabled {
+            pointer-events: none;
+        }
+
         &:before {
             display: block;
             width: 15px;
