Always wrap action button

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -16,6 +16,7 @@
         &[disabled] {
             color: @gray-light;
             cursor: not-allowed;
+            pointer-events: none;
         }
 
         &:hover:not([disabled]) {
@@ -178,15 +179,14 @@
         }
     }
 
-    .action-button {
-        @icon-button-defaults();
-        padding: 0;
-        width: 15px;
-        height: 15px;
+    .action-button-wrapper {
         margin-right: 8px;
 
-        &:disabled {
-            pointer-events: none;
+        .action-button {
+            @icon-button-defaults();
+            width: 15px;
+            height: 15px;
+            padding: 0;
         }
 
         &:before {
