not-allowed cursor for disabled action buttons

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -194,6 +194,12 @@
             width: 15px;
             height: 15px;
         }
+
+        &--disabled {
+            &:hover {
+                cursor: not-allowed;
+            }
+        }
     }
 
     .table-header {
