Disabled button and tooltip bugfix (#46)
* Disabled button and tooltip bugfix

* Always wrap action button

* not-allowed cursor for disabled action buttons

* move key to parent element

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -16,6 +16,7 @@
         &[disabled] {
             color: @gray-light;
             cursor: not-allowed;
+            pointer-events: none;
         }
 
         &:hover:not([disabled]) {
@@ -178,17 +179,26 @@
         }
     }
 
-    .action-button {
-        @icon-button-defaults();
-        padding: 0;
-        width: 15px;
-        height: 15px;
+    .action-button-wrapper {
         margin-right: 8px;
+
+        .action-button {
+            @icon-button-defaults();
+            width: 15px;
+            height: 15px;
+            padding: 0;
+        }
 
         &:before {
             display: block;
             width: 15px;
             height: 15px;
+        }
+
+        &--disabled {
+            &:hover {
+                cursor: not-allowed;
+            }
         }
     }
 
