--- a/src/dialog/dialog.less
+++ b/src/dialog/dialog.less
@@ -1,132 +1,130 @@
 .dialog {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    background: rgba(255, 255, 255, 0.85);
-    z-index: 10;
-  
-    &-title {
-      font-weight: normal;
-      font-size: 20px;
-      color: #58575a;
-      margin: 0px;
-      -ms-word-break: break-all;
-      word-break: break-all;
-      word-break: break-word;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background: rgba(255, 255, 255, 0.85);
+  z-index: 10;
+
+  .icon {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .icon-close {
+    @close-icon();
+  }
+
+  &-title {
+    font-weight: normal;
+    font-size: 20px;
+    color: @gray-darkest;
+    margin: 0px;
+    word-break: break-all;
+  }
+
+  &-content {
+    line-height: 1.4;
+    font-size: 14px;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.25);
+    background: @white;
+    padding: 35px;
+    position: relative;
+
+    &-header {
+      background-color: @white;
+      padding: 0px;
+      color: @gray-coal;
     }
-  
-    &-content {
-      line-height: 1.4;
+
+    &-body {
+      background-color: @white;
       font-size: 14px;
-      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.25);
-      background: @white;
-      padding: 35px;
-      position: relative;
-  
-      &-header {
-        background-color: @white;
-        padding: 0px;
-        color: @gray-coal;
+      color: @gray-darker;
+      padding: 15px 0px;
+    }
+
+    &-footer {
+      background-color: @white;
+      border: none;
+      padding: 0px;
+      text-align: center;
+    }
+
+    &-wrapper {
+      text-align: left;
+      padding: 0px 30px;
+    }
+
+    &-icon-wrapper {
+      font-size: 35px;
+      position: absolute;
+      left: 0;
+      top: 35px;
+
+      .icon-info {
+        @info-icon();
+        color: @info;
       }
-  
-      &-body {
-        background-color: @white;
-        font-size: 14px;
-        color: #828182;
-        padding: 15px 0px;
+
+      .icon-warning {
+        @warning-icon-inv();
+        color: @warning;
       }
-  
-      &-footer {
-        background-color: @white;
-        border: none;
-        padding: 0px;
-        text-align: center;
+
+      .icon-success {
+        @success-icon();
+        color: @success;
       }
-  
-      &-wrapper {
-        float: left;
-        width: 90%;
-        text-align: left;
-      }
-  
-      &-icon-wrapper {
-        float: left;
-        width: 10%;
-        height: 15px;
-        font-size: 35px;
-        position: relative;
-  
-        .color-info {
-          color: @info;
-        }
-  
-        .color-warning {
-          color: @warning;
-        }
-  
-        .color-success {
-          color: @success;
-        }
-  
-        i {
-          position: absolute;
-          top: 0px;
-        }
-      }
-  
-      .cancel {
+
+      span {
         position: absolute;
         top: 0px;
-        right: 10px;
-        border: none;
-        font-size: 36px;
-        padding: 0px;
-        color: #58575a;
-        background: white;
-        font-weight: 200;
-        cursor: pointer;
       }
     }
-  }
-  
-  @media (min-width: @screen-sm-min) {
-    .dialog-content {
-      width: 70vw;
-  
-      .dialog-content-icon-wrapper {
-        width: 100%;
-        height: 50px;
-        text-align: center;
-      }
-  
-      .dialog-content-wrapper {
-        width: 100%;
-      }
+
+    .cancel {
+      position: absolute;
+      top: 27px;
+      right: 10px;
+      border: none;
+      font-size: 22px;
+      padding: 0px;
+      color: @gray-darkest;
+      background: @white;
+      font-weight: 200;
+      cursor: pointer;
     }
   }
-  
-  @media (min-width: @screen-md-min) {
-    .dialog-content {
-      width: 50vw;
-    }
+}
+
+@media (min-width: @screen-sm-min) {
+  .dialog-content {
+    width: 70vw;
   }
-  
-  @media (min-width: @screen-lg-min) {
-    .dialog-content {
-      width: 35vw;
-    }
+}
+
+@media (min-width: @screen-md-min) {
+  .dialog-content {
+    width: 50vw;
   }
-  
-  @media (min-width: @screen-xl-min) {
-    .dialog-content {
-      width: 29.2vw;
-    }
+}
+
+@media (min-width: @screen-lg-min) {
+  .dialog-content {
+    width: 35vw;
   }
+}
+
+@media (min-width: @screen-xl-min) {
+  .dialog-content {
+    width: 29.2vw;
+  }
+}
