Review: add classname to ul element, introduce `filterBy`

--- a/src/select/select.less
+++ b/src/select/select.less
@@ -142,7 +142,7 @@
             overflow: auto;
             cursor: pointer;
 
-            ul {
+            .default-select-list {
                 margin: 0;
                 padding: 0;
                 list-style-type: none;
