--- a/src/input/search-input.less
+++ b/src/input/search-input.less
@@ -2,23 +2,22 @@
     display: flex;
     justify-content: space-between;
     color: @gray-darker;
-
+    align-items: center;
     width: 100%;
+    height: 100%;
     background-color: @white;
+    padding: 0 10px;
 
     .search-input-icon {
         &-filter {
             @table-search-bar-icon();
             font-size: 14px;
-            line-height: 30px;
-            padding: 0 8px;
         }
 
         &-clear {
             @close-icon();
             font-size: 12px;
             line-height: 30px;
-            padding: 0 8px;
             background: transparent;
             border: 0;
             color: @gray-darker;
@@ -34,6 +33,17 @@
         border: none;
         box-shadow: none;
         font-size: 12px;
+        height: 100%;
+
+        &::placeholder {
+            color: @gray-darkest;
+        }
+
+        &:disabled {
+            &::placeholder {
+                color: @gray-light;
+            }
+        }
 
         &:focus {
             outline: none;
