--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -103,6 +103,7 @@
 .multi-level-checkbox-editor-filter {
     margin-left: 20px;
     width: 350px;
+    height: 32px;
     border: @default-border;
 }
 
