--- a/src/two-box-multiselect/two-box-multiselect.less
+++ b/src/two-box-multiselect/two-box-multiselect.less
@@ -28,6 +28,7 @@
 
             .two-box-multiselect-filter-bar {
                 width: 100%;
+                height: 32px;
                 margin-bottom: 5px;
                 border-bottom: @default-border;
             }
