--- a/src/form/form.less
+++ b/src/form/form.less
@@ -8,7 +8,7 @@
         }
     }
 
-    input[type='text'], textarea {
+    .form-control, textarea {
         &::placeholder {
             color: @gray-darker;
         }
