--- a/src/table/table.less
+++ b/src/table/table.less
@@ -163,7 +163,7 @@
                 height: 30px;
                 border: none;
                 text-align: center;
-                padding: 3px 29px 3px 19px;
+                margin-right: 15px;
                 border-bottom: 2px solid @gray-mid;
 
                 .arrow {
