New select input (#49)
* Initial draft - WIP

* Refactor SelectList component

* Extract refs reducer to a separate fn

* Port over missing funtionalities

* Bugfixes, add additional tests, CSS cleanup

* More CSS updates

* Small refactor and add more tests

* Extract options into the variable

* Final refactor

* Make value optional, pass missing prop to select-list and fix css

* CSS Updates, clear value from search select on input click etc.

* CSS Fixes

* Remove `scrollIntoView` functionality

* Remove Props export, change method name

* Remove constructor from select-list

* Change return type of optionsRenderer to `React.ReactNode`

* Review #1

* Review: rename `optionsRenderer` -> `renderOptions`

* Review: add classname to ul element, introduce `filterBy`

* Review: update search-input.tsx and use It in select.tsx

* CSS Updates

* small css updates

--- a/src/input/search-input.less
+++ b/src/input/search-input.less
@@ -1,24 +1,25 @@
 .search-input {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    color: @gray-darker;
 
     width: 100%;
+    height: 100%;
+    padding: 0 10px;
+
     background-color: @white;
+    color: @gray-darker;
 
     .search-input-icon {
         &-filter {
             @table-search-bar-icon();
             font-size: 14px;
-            line-height: 30px;
-            padding: 0 8px;
         }
 
         &-clear {
             @close-icon();
+            padding-right: 0;
             font-size: 12px;
-            line-height: 30px;
-            padding: 0 8px;
             background: transparent;
             border: 0;
             color: @gray-darker;
@@ -34,6 +35,16 @@
         border: none;
         box-shadow: none;
         font-size: 12px;
+
+        &::placeholder {
+            color: @gray-darkest;
+        }
+
+        &:disabled {
+            &::placeholder {
+                color: @gray-light;
+            }
+        }
 
         &:focus {
             outline: none;
