--- a/src/select/select.less
+++ b/src/select/select.less
@@ -1,9 +1,14 @@
 @font-size-mid: 12px;
 @font-family: 'Open Sans',Arial,sans-serif;
 
+@icon-commons: {
+    border: 0;
+    color: @gray-darker;
+    background: transparent;
+};
+
 .select-component {
     color: @gray-darkest;
-    cursor: pointer;
     position: relative;
     font-size: @font-size-mid;
     font-family: @font-family;
@@ -17,17 +22,12 @@
     }
 
     .disabled {
-        color: @gray-dark;
-        cursor: not-allowed;
-        background-color: @gray-stone;
+        color: @gray-light;
     }
 
     .select-option-toggle {
-        height: 34px;
         width: 100%;
-        padding: 5px 22px 5px 10px;
-        display: block;
-
+        height: 34px;
         border: @default-border;
         background-color: @white;
         user-select: none;
@@ -39,29 +39,73 @@
         text-overflow: ellipsis;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 
+        padding: 0 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
         &:hover {
             text-decoration: none;
         }
 
-        &:not(.disabled):hover span.arrow {
-            color: @info;
-        }
-
         .text {
-            vertical-align: middle;
-            line-height: 2em;
+            flex: 1;
         }
 
-        .arrow {
-            @dropdown-icon();
+        &--icon {
+            &-filter {
+                @table-search-bar-icon();
+                @icon-commons();
+                font-size: 14px;
+            }
 
-            font-size: 7px;
-            line-height: 34px;
-            padding: 0 8px;
-            background-color: transparent;
-            position: absolute;
-            top: 1px;
-            right: 1px;
+            &-clear {
+                @close-icon();
+                @icon-commons();
+                font-size: 12px;
+                cursor: pointer;
+                &:disabled {
+                    color: @gray-light;
+                }
+            }
+
+            &-dropdown {
+                @dropdown-icon();
+                @icon-commons();
+                font-size: 14px;
+                cursor: pointer;
+            }
+        }
+
+        &--search {
+            padding-left: 0;
+
+            button {
+                padding: 0;
+                &:not(:last-child) {
+                    margin-right: 8px;
+                }
+            }
+
+            &.has-faded-placeholder {
+                &:not(.disabled) {
+                    .text {
+                        &::placeholder {
+                            color: @gray-darker;
+                        }
+                    }
+                }
+            }
+        }
+
+        &--standard {
+            cursor: pointer;
+            &.has-placeholder {
+                &:not(.disabled) {
+                    color: @gray-darker;
+                }
+            }
         }
     }
 
@@ -72,27 +116,6 @@
         z-index: 1;
         width: 100%;
 
-        .select-filter-bar {
-            display: flex;
-            background-color: @white;
-            border: @default-border;
-            border-top: none;
-            padding: 0 5px 0 0;
-
-            input {
-                padding-left: 10px;
-                border: none;
-                box-shadow: none;
-                outline: none;
-            }
-            .select-filter-icon {
-                @two-box-filter-icon();
-                font-size: 14px;
-                padding-top: 3px;
-                line-height: 30px;
-            }
-        }
-
         .select-option-items {
             width: 100%;
             max-height: 281px;
@@ -102,9 +125,15 @@
             border: @default-border;
             border-top: none;
             background: @white;
-            list-style-type: none;
             box-shadow: none;
             overflow: auto;
+            cursor: pointer;
+
+            .default-select-list {
+                margin: 0;
+                padding: 0;
+                list-style-type: none;
+            }
 
             .active {
                 background-color: @info-light;
