Clear search on click outside, small css update

--- a/src/select/select.less
+++ b/src/select/select.less
@@ -49,6 +49,12 @@
             text-decoration: none;
         }
 
+        input {
+            &.text {
+                height: 100%;
+            }
+        }
+
         .text {
             flex: 1;
         }
