--- a/src/toggle/toggle.less
+++ b/src/toggle/toggle.less
@@ -23,6 +23,10 @@
         background-color: @gray-darker;
         transition: background-color ease 0.5s;
 
+        &:disabled {
+            background-color: @gray-light;
+        }
+
         &:before {
             content: '';
             display: block;
@@ -40,6 +44,9 @@
 
 .toggle:checked {
     background-color: @info-darker;
+    &:disabled {
+        background-color: @info-lighter;
+    }
 }
 
 .toggle:checked:before {
