--- a/src/spinner/spinner.less
+++ b/src/spinner/spinner.less
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
 
-    .base-spinner(@spinnerSize: 50px, @spinnerColor: @success) {
+    .base-spinner(@spinnerSize: 50px, @spinnerColor: @primary-color) {
         @circleAnimationDuration: 1300ms;
         @circleAnimationDelay: 150ms;
         @circleDistance: (3px / 50px) * @spinnerSize;
