--- a/src/variables.less
+++ b/src/variables.less
@@ -26,9 +26,10 @@
 @warning-light: #FFE7C8;
 @warning: #FB9600;
 
-@primary-color: @info;
-@primary-color-dark: @info-dark;
+@primary-color: @info-dark;
+@primary-color-variant: @info;
 @primary-color-darker: @info-darker;
+@primary-color-light: @info-light;
 
 @default-border: 1px solid @gray-mid;
 
