--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -22,7 +22,7 @@
         text-transform: uppercase;
 
         @hover: {
-            color: @success;
+            color: @primary-color-light;
             transition: all 200ms linear;
         };
 
@@ -41,15 +41,12 @@
 
             &:hover {
                 @hover();
+                box-shadow: inset 0 -4px 0 0 @primary-color-variant;
             }
         }
 
         &:hover {
             @hover();
         }
-    }
-
-    .selected {
-        color: @success;
     }
 }
