Review: Add styles for disabled btn-secondary state

--- a/src/button/button.less
+++ b/src/button/button.less
@@ -49,4 +49,10 @@
         border: 1px solid @primary-color-variant;
         color: @primary-color-variant;
     }
+
+    &[disabled] {
+        background-color: @gray-light;
+        color: @info-lighter;
+        border: 1px solid @info-lighter;
+    }
 }
