--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -26,6 +26,10 @@
             transition: all 200ms linear;
         };
 
+        &.selected {
+            box-shadow: inset 0 -4px 0 0 @primary-color;
+        }
+
         .navigation-item {
             display: flex;
             align-items: center;
