--- a/src/sidebar/sidebar.less
+++ b/src/sidebar/sidebar.less
@@ -35,7 +35,7 @@
             cursor: pointer;
 
             &:hover {
-                color: @gray-darkest;
+                color: @primary-color-variant;
             }
         }
 
