Updates on highlighting items in sidebar nav (#54)
* Updates on highlighting items in sidebar nav

* Cleanup

--- a/src/tree/tree.less
+++ b/src/tree/tree.less
@@ -2,10 +2,6 @@
     .level-1 {
         padding-top: 5px;
         padding-bottom: 5px;
-
-        &.highlighted > .node-content > .node-label {
-            color: @gray-darkest;
-        }
     }
 
     .nodes {
@@ -21,14 +17,30 @@
         cursor: pointer;
 
         &:hover {
-            .node-label {
+            .node-label, .node-icon {
                 color: @primary-color;
             }
         }
 
         &.highlighted {
-            color: @primary-color;
             font-weight: bold;
+
+            .node-content {
+                .node-label {
+                    color: @gray-darkest;
+                }
+                .node-icon {
+                    color: @primary-color-darker;
+                }
+            }
+
+            &.leaf {
+                .node-content {
+                    .node-label, .node-icon {
+                        color: @primary-color-darker;
+                    }
+                }
+            }
         }
     }
 
