--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -27,7 +27,7 @@
         };
 
         &.selected {
-            box-shadow: inset 0 -4px 0 0 @primary-color;
+            box-shadow: inset 0 -4px 0 0 @primary-color-darker;
         }
 
         .navigation-item {
