--- a/src/topbar/topbar.less
+++ b/src/topbar/topbar.less
@@ -48,7 +48,7 @@
             }
 
             &.selected {
-                box-shadow: inset 0 -4px 0 0 @primary-color;
+                box-shadow: inset 0 -4px 0 0 @primary-color-darker;
             }
         }
     }
