Reduce padding from sides in nav item

--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -35,7 +35,7 @@
             align-items: center;
             color: @color;
 
-            padding: 0 12px 0 12px;
+            padding: 0 8px;
             height: 100%;
             font-size: inherit;
             text-decoration: none;
