--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -27,7 +27,7 @@
         };
 
         &.selected {
-            box-shadow: inset 0 -4px 0 0 @primary-color;
+            box-shadow: inset 0 -4px 0 0 @primary-color-darker;
         }
 
         .navigation-item {
@@ -35,7 +35,7 @@
             align-items: center;
             color: @color;
 
-            padding: 0 12px 0 12px;
+            padding: 0 8px;
             height: 100%;
             font-size: inherit;
             text-decoration: none;
