--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -6,7 +6,7 @@
     };
 
     .node-box {
-        margin: 10px 20px;
+        margin: 10px 12px;
         position: relative;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 
@@ -132,4 +132,21 @@
         }
     }
 }
+
+.empty-nodebox {
+    display: flex;
+    margin: 10px 12px;
+    width: 180px;
+    border: 1px solid #D7D7D7;
+    background: #FFFFFF;
+    padding: 20px;
+    max-height: 250px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+
+    > p {
+        margin: auto;
+        text-align: left;
+    }
+}
+
 
