UMA-60 empty box calculation fix, searchbox layout

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -101,10 +101,13 @@
 }
 
 .multi-level-checkbox-editor-filter {
-    margin-left: 20px;
-    width: 350px;
+    margin-left: 12px;
+    width: 275px;
     height: 32px;
     border: @default-border;
+    .search-input {
+        width: initial;
+    }
 }
 
 .info-box {
