--- a/src/dialog/dialog.less
+++ b/src/dialog/dialog.less
@@ -14,8 +14,8 @@
     z-index: 10;
 
     .icon {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .icon-close {
@@ -35,39 +35,53 @@
         font-size: 14px;
         box-shadow: 0 2px 20px rgba(0, 0, 0, 0.25);
         background: @white;
-        padding: 35px;
+        display: table;
         position: relative;
+        padding: 0px;
+
+        .btn-secondary+.btn {
+            margin-left: 24px;
+        }
+
+        .btn {
+            height: 40px;
+            margin-left: 24px;
+            font-size: 14px;
+        }
 
         &-header {
             background-color: @white;
-            padding: 0px;
+            padding-top: 24px;
             color: @gray-coal;
         }
 
         &-body {
             background-color: @white;
             font-size: 14px;
-            color: @gray-darker;
-            padding: 15px 0px;
+            color: @gray-darkest;
+            padding: 16px 0px 24px 0px;
+            line-height: 1.5;
         }
 
         &-footer {
             background-color: @white;
             border: none;
-            padding: 0px;
+            padding-bottom: 24px;
             text-align: center;
         }
 
         &-wrapper {
             text-align: left;
-            padding: 0px 30px;
+            padding: 0px 24px;
         }
 
         &-icon-wrapper {
             font-size: 35px;
-            position: absolute;
-            left: 0;
-            top: 35px;
+            padding-left: 16px;
+            display: table-cell;
+            position: inherit;
+            top: 5px;
+            padding-right: 0px;
 
             .icon-info {
                 @info-icon();
@@ -85,19 +99,19 @@
             }
 
             span {
-                position: absolute;
+                position: inherit;
                 top: 0px;
             }
         }
 
         .cancel {
             position: absolute;
-            top: 27px;
-            right: 10px;
+            top: 16px;
+            right: 16px;
             border: none;
-            font-size: 22px;
+            font-size: 24px;
             padding: 0px;
-            color: @gray-darkest;
+            color: @gray-darker;
             background: @white;
             font-weight: 200;
             cursor: pointer;
