Adding no node class

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -76,6 +76,9 @@
         &.highlighted {
           background: @info-light;
         }
+        &.no-child-node {
+          cursor: default;
+        }
 
         div {
           display: flex;
