--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -98,6 +98,10 @@
         .node-label {
           display: flex;
           flex-direction: column;
+
+          .node-label-1 {
+            color: #c3c3c3;
+          }
         }
 
         .node-label > div + div {
