--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -80,7 +80,7 @@
           cursor: default;
         }
 
-        & > div {
+        &.node-checkbox-selection {
           display: flex;
           align-items: center;
         }
@@ -100,7 +100,7 @@
           flex-direction: column;
 
           .node-label-1 {
-            color: #c3c3c3;
+            color: @gray-dark;
           }
         }
 
