--- a/src/variables.less
+++ b/src/variables.less
@@ -4,6 +4,7 @@
 @gray-lighter: #F3F3F3;
 @gray-light: #E7E7E7;
 @gray-mid: #D7D7D7;
+@gray-mid-light: #00000029;
 @gray-dark: #C3C3C3;
 @gray-darker: #888888;
 @gray-darkest: #58585A;
